lang/macro/tests/ui/fail/16-invalid-parameter-type.stderr
error[E0277]: the trait bound `f32: SolTypeNameLen<_>` is not satisfied
 --> $DIR/16-invalid-parameter-type.rs:3:1
  |
3 | #[liquid::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SolTypeNameLen<_>` is not implemented for `f32`
  |
  = note: required because of the requirements on the impl of `SolTypeNameLen<_>` for `(f32,)`
  = note: required by `LEN`
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> $DIR/16-invalid-parameter-type.rs:12:21
   |
12 |         pub fn noop(&self, value: f32) {}
   |                     ^^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
